## automake.am
##
## docs/automake.am for Rivendell
##
## (C) Copyright 2002-2006 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.17.2.3 2009/12/07 21:57:47 cvs Exp $
##      $Date: 2009/12/07 21:57:47 $
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
## Use automake to process this into a Makefile.in

SUBDIRS = tables

EXTRA_DIST = ALSA.txt GPIO.txt JACK.txt NOW+NEXT.txt SWITCHERS.txt WIN32.txt\
			 WINGS_FILTER.txt cae.sxw catchd.txt colors \
                         implemented_macros.txt pam_rd.txt reports.txt \
                         ripc.txt rml.sxw PODCASTING.txt RIVENDELL_FILTER.txt\
                         ENCODERS.txt MESSAGE_BOX.txt scheduler_formats.ods\
                         copy_split_format.odt

CLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in configure aclocal.m4
